--- a/pages/index.html
+++ b/pages/index.html
@@ -30,12 +30,12 @@
             </div>
           </section>
 
-          <section class="landing-cta">
-            <div class="landing-cta__container container-base">
-              <div class="landing-cta__image">
+          <section class="cta">
+            <div class="cta__container container-base">
+              <div class="cta__image">
                 <img src="/public/images/imgs.webp" alt="Personal Care" />
               </div>
-              <div class="landing-cta__content landing-content">
+              <div class="cta__content section-content">
                 <h2>
                   Professional Care Tailored <br />
                   to Your Needs
@@ -46,41 +46,43 @@
                   <li>Home modifications (e.g., wheelchair ramps)</li>
                   <li>Medical and non-medical support</li>
                 </ul>
-                <a href="" class="landing-button">Check Your Eligibility</a>
+                <a href="" class="button">Check Your Eligibility</a>
               </div>
             </div>
           </section>
 
-          <section class="landing-testimonials">
-            <div class="landing-testimonials__container container-base">
-              <h2 class="landing-testimonials__title">Trusted By Families Like Yours</h2>
-              <div class="landing-testimonials__items">
-                <div class="landing-testimonials__item landing-testimonial">
+          <section class="testimonials">
+            <div class="testimonials__container container-base">
+              <h2 class="testimonials__title">Trusted By Families Like Yours</h2>
+              <div class="testimonials__items">
+                <div class="testimonials__item testimonial">
                   <img
                     src="/public/images/stars.svg"
                     alt="5 star rating"
                     title="5 star rating"
-                    class="landing-testimonial__rating"
+                    class="testimonial__rating"
                   />
-                  <p class="landing-testimonial__text">
+                  <p class="testimonial__text">
                     Caring with Integrity helped my mom stay at home with dignity. Their team is amazing!
                   </p>
-                  <p class="landing-testimonial__author">Sarah K.</p>
+                  <p class="testimonial__author">Sarah K.</p>
                 </div>
-                <div class="landing-testimonials__item landing-testimonial">
+                <div class="testimonials__item testimonial">
                   <img
                     src="/public/images/stars.svg"
                     alt="5 star rating"
                     title="5 star rating"
-                    class="landing-testimonial__rating"
+                    class="testimonial__rating"
                   />
-                  <p class="landing-testimonial__text">
-                    The Medicaid Waiver process was so easy with their help. Highly recommend!
+                  <p class="testimonial__text">
+                    Rorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac
+                    aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                    inceptos himenaeos.
                   </p>
-                  <p class="landing-testimonial__author">John P.</p>
+                  <p class="testimonial__author">John P.</p>
                 </div>
               </div>
-              <a href="#" class="landing-testimonials__button landing-button">Call Us Today</a>
+              <a href="#" class="testimonials__button button">Call Us Today</a>
             </div>
           </section>
         </main>
