--- a/pages/index.html
+++ b/pages/index.html
@@ -3,91 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>services-lp</title>
+    <title>Home Page</title>
   </head>
   <body>
-    <div class="landing">
-      <div class="wrapper">
-        {{> header}}
-        <main>
-          <section class="landing-hero">
-            <div class="landing-hero__container container-base">
-              <div class="landing-hero__banner">
-                <img src="/public/images/image3 1.webp" alt="Woman" />
-              </div>
-              <div class="landing-hero__body">
-                <div class="landing-hero__content">
-                  <h1><i>Compassionate Care</i> in the Comfort of Your Home</h1>
-                  <p>Personalized home care services through Medicaid Waiver and Private Pay options.</p>
-                </div>
-                <div class="landing-hero__form">
-                  <h2 class="landing-hero__form-title">How Can We Help You?</h2>
-                  <div class="landing-hero__form-body">
-                    <script type="text/javascript" src="https://form.jotform.com/jsform/243592386736166"></script>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-
-          <section class="cta">
-            <div class="cta__container container-base">
-              <div class="cta__image">
-                <img src="/public/images/imgs.webp" alt="Personal Care" />
-              </div>
-              <div class="cta__content section-content">
-                <h2>
-                  Professional Care Tailored <br />
-                  to Your Needs
-                </h2>
-                <ul>
-                  <li>Assistance with daily living (bathing, dressing, meal prep)</li>
-                  <li>Transportation to medical appointments</li>
-                  <li>Home modifications (e.g., wheelchair ramps)</li>
-                  <li>Medical and non-medical support</li>
-                </ul>
-                <a href="" class="button">Check Your Eligibility</a>
-              </div>
-            </div>
-          </section>
-
-          <section class="testimonials">
-            <div class="testimonials__container container-base">
-              <h2 class="testimonials__title">Trusted By Families Like Yours</h2>
-              <div class="testimonials__items">
-                <div class="testimonials__item testimonial">
-                  <img
-                    src="/public/images/stars.svg"
-                    alt="5 star rating"
-                    title="5 star rating"
-                    class="testimonial__rating"
-                  />
-                  <p class="testimonial__text">
-                    Caring with Integrity helped my mom stay at home with dignity. Their team is amazing!
-                  </p>
-                  <p class="testimonial__author">Sarah K.</p>
-                </div>
-                <div class="testimonials__item testimonial">
-                  <img
-                    src="/public/images/stars.svg"
-                    alt="5 star rating"
-                    title="5 star rating"
-                    class="testimonial__rating"
-                  />
-                  <p class="testimonial__text">
-                    Rorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac
-                    aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-                    inceptos himenaeos.
-                  </p>
-                  <p class="testimonial__author">John P.</p>
-                </div>
-              </div>
-              <a href="#" class="testimonials__button button">Call Us Today</a>
-            </div>
-          </section>
-        </main>
-        {{> footer}}
-      </div>
+    <div class="wrapper">
+      {{> header}}
+      <main></main>
+      {{> footer}}
     </div>
     <script type="module" src="../src/scripts/main.ts" defer></script>
   </body>
