--- a/pages/landing.html
+++ b/pages/landing.html
@@ -8,7 +8,7 @@
   <body>
     <div class="landing">
       <div class="wrapper">
-        {{> header}}
+        {{> header-landing}}
         <main>
           <section class="landing-hero">
             <div class="landing-hero__container container-base">
@@ -53,40 +53,69 @@
 
           <section class="testimonials">
             <div class="testimonials__container container-base">
-              <h2 class="testimonials__title">Trusted By Families Like Yours</h2>
-              <div class="testimonials__items">
-                <div class="testimonials__item testimonial">
-                  <img
-                    src="/public/images/stars.svg"
-                    alt="5 star rating"
-                    title="5 star rating"
-                    class="testimonial__rating"
-                  />
-                  <p class="testimonial__text">
-                    Caring with Integrity helped my mom stay at home with dignity. Their team is amazing!
-                  </p>
-                  <p class="testimonial__author">Sarah K.</p>
+              <h2 class="testimonials__title">Testimonials</h2>
+              <div class="testimonials__content">
+                <div id="testimonials-slider" class="testimonials__outer swiper">
+                  <div class="testimonials__items swiper-wrapper">
+                    <div class="testimonials__item testimonial swiper-slide">
+                      <img
+                        src="/public/images/stars.svg"
+                        alt="5 star rating"
+                        title="5 star rating"
+                        class="testimonial__rating"
+                      />
+                      <p class="testimonial__text">
+                        Caring with Integrity helped my mom stay at home with dignity. Their team is amazing!
+                      </p>
+                      <p class="testimonial__author">Sarah K.</p>
+                    </div>
+                    <div class="testimonials__item testimonial swiper-slide">
+                      <img
+                        src="/public/images/stars.svg"
+                        alt="5 star rating"
+                        title="5 star rating"
+                        class="testimonial__rating"
+                      />
+                      <p class="testimonial__text">
+                        Rorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit
+                        interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia
+                        nostra, per inceptos himenaeos.
+                      </p>
+                      <p class="testimonial__author">John P.</p>
+                    </div>
+                    <div class="testimonials__item testimonial swiper-slide">
+                      <img
+                        src="/public/images/stars.svg"
+                        alt="5 star rating"
+                        title="5 star rating"
+                        class="testimonial__rating"
+                      />
+                      <p class="testimonial__text">
+                        Rorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit
+                        interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia
+                        nostra, per inceptos himenaeos.
+                      </p>
+                      <p class="testimonial__author">John P.</p>
+                    </div>
+                  </div>
                 </div>
-                <div class="testimonials__item testimonial">
-                  <img
-                    src="/public/images/stars.svg"
-                    alt="5 star rating"
-                    title="5 star rating"
-                    class="testimonial__rating"
-                  />
-                  <p class="testimonial__text">
-                    Rorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac
-                    aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-                    inceptos himenaeos.
-                  </p>
-                  <p class="testimonial__author">John P.</p>
+                <div class="testimonials__navigation">
+                  <button class="testimonials__prev-button" type="button">
+                    <span class="circle-button"></span>
+                  </button>
+                  <div class="testimonials__pagination"></div>
+                  <button class="testimonials__next-button" type="button">
+                    <span class="circle-button"></span>
+                  </button>
                 </div>
               </div>
-              <a href="#" class="testimonials__button button">Call Us Today</a>
+              <div class="testimonials__button-wrapper">
+                <a href="#" class="button testimonials__button">kolp</a>
+              </div>
             </div>
           </section>
         </main>
-        {{> footer}}
+        {{> footer-landing}}
       </div>
     </div>
     <script type="module" src="../src/scripts/main.ts" defer></script>
