--- a/pages/landing.html
+++ b/pages/landing.html
@@ -8,7 +8,7 @@
   <body>
     <div class="landing">
       <div class="wrapper">
-        {{> header-landing}}
+        {{> header-absolute}}
         <main>
           <section class="landing-hero">
             <div class="landing-hero__container container-base">
