Add new footer background with responsive underlay images and update footer styles

--- a/pages/index.html
+++ b/pages/index.html
@@ -264,7 +264,7 @@
           </div>
         </section>
       </main>
-      {{> modal}} {{> footer}}
+      {{> modal}} {{> footer-bg}}
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.7/swiper-bundle.min.js"></script>
     <script type="module" src="../src/scripts/main.ts" defer></script>
