--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.7/swiper-bundle.min.css" />
     <title>Home Page</title>
   </head>
-  <body>
+  <body id="top">
     <div class="wrapper">
       {{> header-absolute}}
       <main>
@@ -264,8 +264,24 @@
           </div>
         </section>
       </main>
+      <a href="#top" title="Go top" aria-label="Go top" data-js-to-top-button class="to-top-button">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+        >
+          <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
+        </svg>
+      </a>
       {{> modal}} {{> footer-bg}}
     </div>
+    <script>
+      const acfData = {
+        smoothScroll: 1,
+      };
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.7/swiper-bundle.min.js"></script>
     <script type="module" src="../src/scripts/main.ts" defer></script>
   </body>
