Додавання нових секцій на головну сторінку: інтеграція відгуків Google, стрічки Instagram та FAQ з відповідними стилями та функціональністю аккордеона.

--- a/pages/index.html
+++ b/pages/index.html
@@ -349,6 +349,147 @@
             </div>
           </div>
         </section>
+
+        <section class="google-testimonials">
+          <div class="google-testimonials__container container-base">
+            <h2>Testimonials</h2>
+            <div class="google-testimonials__body">[GOOGLE TESTIMONIALS]</div>
+          </div>
+        </section>
+
+        <section class="instagram-feed">
+          <div class="instagram-feed__container container-base">
+            <h2>Follow Us on Instagram</h2>
+            <div class="instagram-feed__body">[INSTAGRAM FEED]</div>
+            <div class="instagram-feed__footer">
+              <a href="#" target="_blank" class="instagram-feed__button button-cta">View all</a>
+            </div>
+          </div>
+        </section>
+
+        <section class="faq" data-js-accordion itemscope itemtype="https://schema.org/FAQPage">
+          <div class="faq__container container-base">
+            <h2>FAQ</h2>
+            <div class="faq__content">
+              <div class="faq__item" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                <button
+                  id="faq-button-1"
+                  type="button"
+                  aria-expanded="false"
+                  aria-controls="faq-panel-1"
+                  class="faq__item-title"
+                  data-js-accordion-trigger
+                  itemprop="name"
+                >
+                  What is the cost of home care?
+                </button>
+                <div
+                  class="faq__item-panel"
+                  role="region"
+                  id="faq-panel-1"
+                  aria-labelledby="faq-button-1"
+                  itemscope
+                  itemprop="acceptedAnswer"
+                  itemtype="https://schema.org/Answer"
+                >
+                  <div class="faq__item-content" itemprop="text">
+                    <p itemprop="text">
+                      The cost of home care varies depending on the services you need and the caregiver's experience. We
+                      offer flexible pricing options to meet your budget and needs.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="faq__item" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                <button
+                  id="faq-button-1"
+                  type="button"
+                  aria-expanded="false"
+                  aria-controls="faq-panel-1"
+                  class="faq__item-title"
+                  data-js-accordion-trigger
+                  itemprop="name"
+                >
+                  What is the cost of home care?
+                </button>
+                <div
+                  class="faq__item-panel"
+                  role="region"
+                  id="faq-panel-1"
+                  aria-labelledby="faq-button-1"
+                  itemscope
+                  itemprop="acceptedAnswer"
+                  itemtype="https://schema.org/Answer"
+                >
+                  <div class="faq__item-content" itemprop="text">
+                    <p itemprop="text">
+                      The cost of home care varies depending on the services you need and the caregiver's experience. We
+                      offer flexible pricing options to meet your budget and needs.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="faq__item" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                <button
+                  id="faq-button-1"
+                  type="button"
+                  aria-expanded="false"
+                  aria-controls="faq-panel-1"
+                  class="faq__item-title"
+                  data-js-accordion-trigger
+                  itemprop="name"
+                >
+                  What is the cost of home care?
+                </button>
+                <div
+                  class="faq__item-panel"
+                  role="region"
+                  id="faq-panel-1"
+                  aria-labelledby="faq-button-1"
+                  itemscope
+                  itemprop="acceptedAnswer"
+                  itemtype="https://schema.org/Answer"
+                >
+                  <div class="faq__item-content" itemprop="text">
+                    <p itemprop="text">
+                      The cost of home care varies depending on the services you need and the caregiver's experience. We
+                      offer flexible pricing options to meet your budget and needs.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="faq__item" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                <button
+                  id="faq-button-1"
+                  type="button"
+                  aria-expanded="false"
+                  aria-controls="faq-panel-1"
+                  class="faq__item-title"
+                  data-js-accordion-trigger
+                  itemprop="name"
+                >
+                  What is the cost of home care?
+                </button>
+                <div
+                  class="faq__item-panel"
+                  role="region"
+                  id="faq-panel-1"
+                  aria-labelledby="faq-button-1"
+                  itemscope
+                  itemprop="acceptedAnswer"
+                  itemtype="https://schema.org/Answer"
+                >
+                  <div class="faq__item-content" itemprop="text">
+                    <p itemprop="text">
+                      The cost of home care varies depending on the services you need and the caregiver's experience. We
+                      offer flexible pricing options to meet your budget and needs.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <a href="#top" title="Go top" aria-label="Go top" data-js-to-top-button class="to-top-button">
         <svg
